; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/misc/extr_appendvfs.c_apndFullPathname.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/misc/extr_appendvfs.c_apndFullPathname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (%struct.TYPE_3__*, i8*, i32, i8*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i8*)* @apndFullPathname to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @apndFullPathname(i32* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call %struct.TYPE_3__* @ORIGVFS(i32* %9)
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32 (%struct.TYPE_3__*, i8*, i32, i8*)*, i32 (%struct.TYPE_3__*, i8*, i32, i8*)** %11, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call %struct.TYPE_3__* @ORIGVFS(i32* %13)
  %15 = load i8*, i8** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i8*, i8** %8, align 8
  %18 = call i32 %12(%struct.TYPE_3__* %14, i8* %15, i32 %16, i8* %17)
  ret i32 %18
}

declare dso_local %struct.TYPE_3__* @ORIGVFS(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
